RESOLVED FIXED284686
Early return instead of terminating web process if a frame no longer exists when receiving a message for it
https://bugs.webkit.org/show_bug.cgi?id=284686
Summary Early return instead of terminating web process if a frame no longer exists w...
Alex Christensen
Reported 2024-12-13 22:13:35 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-13 22:13:48 PST
Alex Christensen
Comment 2 2024-12-13 22:17:48 PST
EWS
Comment 3 2024-12-16 11:02:10 PST
Committed 287896@main (24f5c63d5933): <https://commits.webkit.org/287896@main> Reviewed commits have been landed. Closing PR #37962 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.